# llvm-project

liuchao/: build.sh  env.sh  test.sh  test.toy
mlir/examples/toy/Ch1/: CMakeLists.txt  toyc.cpp
mlir/examples/toy/Ch1/include/toy/: CMakeLists.txt  Ops.td
mlir/examples/toy/Ch1/mlir/: Dialect.cpp  MLIRGen.cpp
